# stereo

./: .gitignore  gradTmpl.pgm  gradTmpr.pgm  runalg  tmp-log.txt
GF-Matlab/: example_referenceForCVPR11.m  gradTmpl.pgm
GF-Matlab/MatlabSDK/: pfmwrite.m  runGF.m
MatlabSDK/: pfmwrite.m  runCensus.m  runGF.m
StereoHalide/: CMakeLists.txt
StereoHalide/BM/: CMakeLists.txt  profile.cpp  stereoBM.h
StereoHalide/guidedFilter/: CMakeLists.txt  guidedfilter.cpp  runGF.cpp  test.cpp
StereoHalide/lib/: guidedfilter.cpp  profile.cpp  stereo.h  stereoBM.cpp
StereoHalide/src/: runBM.cpp  runGF.cpp  test.cpp
alg-GF-Halide/: run
alg-StereoBM-Halide/: CMakeLists.txt  run
alg-StereoBM-Halide/lib/: guidedfilter.cpp  profile.cpp  stereo.h
alg-StereoBM-Halide/src/: main.cpp  stereo.h  stereoBM.cpp  stereoSGBM.cpp  test.cpp
alg-StereoBM-opencv/: CMakeLists.txt  disp0.pfm  run  time.txt  tmp-log.txt
alg-StereoBM-opencv/src/: stereo_match.cpp
alg-StereoGF/: example_referenceForCVPR11.m  gradTmpr.pgm  runStereoMatcher.m
code/: computemask  disp2pfm  evaldisp  evaldisp.cpp  ii  pfm2png  png2pgm
code/computemask.dSYM/Contents/Resources/DWARF/: computemask
code/disp2pfm.dSYM/Contents/Resources/DWARF/: disp2pfm
code/evaldisp.dSYM/Contents/Resources/DWARF/: evaldisp
code/ii.dSYM/Contents/Resources/DWARF/: ii
code/pfm2png.dSYM/Contents/Resources/DWARF/: pfm2png
code/png2pgm.dSYM/Contents/Resources/DWARF/: png2pgm
